[gd_scene load_steps=12 format=2]

[ext_resource path="res://Battle/Level Up.gd" type="Script" id=1]
[ext_resource path="res://Battle/AnimationManager.gd" type="Script" id=2]
[ext_resource path="res://Battle/Players.gd" type="Script" id=3]
[ext_resource path="res://Battle/Entity_Battle.tscn" type="PackedScene" id=4]
[ext_resource path="res://Battle/Log.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Backgrounds/forest2.png" type="Texture" id=6]
[ext_resource path="res://Battle/Level Up Log.tscn" type="PackedScene" id=7]
[ext_resource path="res://Battle/Interface.gd" type="Script" id=8]
[ext_resource path="res://Assets/Panels/Menu_Info_Panel.tres" type="StyleBox" id=9]
[ext_resource path="res://Battle/Menus/ActionButton.tscn" type="PackedScene" id=10]
[ext_resource path="res://Battle/Menus/Player_Info.tscn" type="PackedScene" id=11]


[node name="Battle" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationManager" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Players" type="Button" parent="AnimationManager"]
margin_left = 175.0
margin_top = 140.0
margin_right = 975.0
margin_bottom = 940.0
rect_scale = Vector2( 0.75, 0.75 )
flat = true
script = ExtResource( 3 )

[node name="P0" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 75.0
margin_right = 312.0
margin_bottom = 95.0
Player = true

[node name="P1" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 300.0
margin_right = 312.0
margin_bottom = 320.0
Player = true

[node name="P2" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 550.0
margin_right = 312.0
margin_bottom = 570.0
Player = true

[node name="P3" parent="AnimationManager/Players" instance=ExtResource( 4 )]
margin_left = 300.0
margin_top = 775.0
margin_right = 312.0
margin_bottom = 795.0
Player = true

[node name="Enemies" type="Button" parent="AnimationManager"]
editor/display_folded = true
script = ExtResource( 3 )

[node name="E0" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]

[node name="E1" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]

[node name="E2" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]

[node name="E3" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]

[node name="E4" parent="AnimationManager/Enemies" instance=ExtResource( 4 )]

[node name="Log" parent="AnimationManager" instance=ExtResource( 5 )]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 966.024, 518.53 )
scale = Vector2( 1.96703, 1.51696 )
z_index = -1
texture = ExtResource( 6 )

[node name="LevelUpLog" parent="." instance=ExtResource( 7 )]
position = Vector2( 1299.63, 260.148 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Interface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Interface"]
margin_left = 4.0
margin_top = 908.0
margin_right = 1919.0
margin_bottom = 1080.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_styles/panel = ExtResource( 9 )

[node name="Menu" type="VBoxContainer" parent="Interface"]
margin_left = 10.0
margin_top = 912.084
margin_right = 328.0
margin_bottom = 1073.08

[node name="Attack" parent="Interface/Menu" instance=ExtResource( 10 )]
margin_right = 318.0
margin_bottom = 28.0
focus_neighbour_top = NodePath("../Run")
text = "Attack"

[node name="Lane" parent="Interface/Menu" instance=ExtResource( 10 )]
margin_top = 32.0
margin_right = 318.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 896.515, -365.321 )
text = "Lane"

[node name="Skill" parent="Interface/Menu" instance=ExtResource( 10 )]
margin_top = 64.0
margin_right = 318.0
margin_bottom = 92.0
text = "Skill"

[node name="Item" parent="Interface/Menu" instance=ExtResource( 10 )]
margin_top = 96.0
margin_right = 318.0
margin_bottom = 124.0
text = "Item"

[node name="Run" parent="Interface/Menu" instance=ExtResource( 10 )]
margin_top = 128.0
margin_right = 318.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 896.515, -365.321 )
focus_neighbour_bottom = NodePath("../Attack")
focus_next = NodePath("")
text = "Run"

[node name="Info" type="VBoxContainer" parent="Interface"]
editor/display_folded = true
margin_left = 1080.0
margin_top = 925.0
margin_right = 1756.0
margin_bottom = 1061.0
rect_min_size = Vector2( 676, 136 )
rect_scale = Vector2( 1.2, 1 )
alignment = 1

[node name="P0" parent="Interface/Info" instance=ExtResource( 11 )]
visible = false
margin_top = 53.0
margin_right = 676.0
margin_bottom = 83.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P1" parent="Interface/Info" instance=ExtResource( 11 )]
visible = false
margin_top = 70.0
margin_right = 676.0
margin_bottom = 100.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P2" parent="Interface/Info" instance=ExtResource( 11 )]
visible = false
margin_top = 87.0
margin_right = 676.0
margin_bottom = 117.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[node name="P3" parent="Interface/Info" instance=ExtResource( 11 )]
visible = false
margin_top = 104.0
margin_right = 676.0
margin_bottom = 134.0
rect_min_size = Vector2( 664, 30 )
alignment = 2

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="Interface/Menu" to="." method="_on_Menu_gui_input"]
[connection signal="button_down" from="Interface/Menu/Attack" to="." method="_on_Attack_button_down"]
[connection signal="button_down" from="Interface/Menu/Lane" to="." method="_on_Lane_button_down"]
[connection signal="button_down" from="Interface/Menu/Skill" to="." method="_on_Skills_button_down"]
[connection signal="button_down" from="Interface/Menu/Item" to="." method="_on_Itens_button_down"]
[connection signal="button_down" from="Interface/Menu/Run" to="." method="_on_Run_button_down"]
